feat: integrate audit with creates and updates; test updates