@@ -25,7 +25,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.broadinstitute.consent.http.AbstractTestHelper;
 import org.broadinstitute.consent.http.db.DACAutomationRuleDAO;
@@ -36,7 +35,6 @@ import org.broadinstitute.consent.http.db.ElectionDAO;
 import org.broadinstitute.consent.http.db.UserDAO;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
-import org.broadinstitute.consent.http.models.AuthUser;
 import org.broadinstitute.consent.http.models.Dac;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
@@ -135,7 +133,7 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindById() {
     int dacId = 1;
-    when(dacDAO.findById(dacId)).thenReturn(getDacs().get(0));
+    when(dacDAO.findById(dacId)).thenReturn(getDacs().getFirst());
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.CHAIRPERSON.getRoleId()))
         .thenReturn(Collections.singletonList(getDacUsers().get(0)));
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.MEMBER.getRoleId()))
@@ -153,34 +151,32 @@ class DacServiceTest extends AbstractTestHelper {
 
   @Test
   void testCreateDac() {
-    when(dacDAO.createDac(anyString(), anyString(), any())).thenReturn(getDacs().get(0).getDacId());
-    doNothing().when(dacDAO).insertDacAudit(any(), any(), any(), any(), anyString());
+    when(dacDAO.createDac(anyString(), anyString(), any()))
+        .thenReturn(getDacs().getFirst().getDacId());
     initService();
 
     Integer dacId = service.createDac("name", "description", 1);
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
   void testCreateDacWithEmail() {
     when(dacDAO.createDac(anyString(), anyString(), anyString(), any()))
-        .thenReturn(getDacs().get(0).getDacId());
-    doNothing().when(dacDAO).insertDacAudit(any(), any(), any(), any(), anyString());
+        .thenReturn(getDacs().getFirst().getDacId());
     initService();
 
     Integer dacId = service.createDac("name", "description", "email@test.com", 1);
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
   void testUpdateDac() {
     doNothing().when(dacDAO).updateDac(anyString(), anyString(), any(), any());
-    doNothing().when(dacDAO).insertDacAudit(any(), any(), any(), any(), anyString());
     initService();
 
     try {
       service.updateDac("name", "description", 1, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -188,12 +184,11 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testUpdateDacWithEmail() {
     doNothing().when(dacDAO).updateDac(anyString(), anyString(), anyString(), any(), any());
-    doNothing().when(dacDAO).insertDacAudit(any(), any(), any(), any(), anyString());
     initService();
 
     try {
       service.updateDac("name", "description", "test@email.com", 1, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -250,8 +245,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindMembersByDacId() {
     when(dacDAO.findMembersByDacId(anyInt()))
-        .thenReturn(Collections.singletonList(getDacUsers().get(0)));
-    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().get(0).getRoles());
+        .thenReturn(Collections.singletonList(getDacUsers().getFirst()));
+    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().getFirst().getRoles());
     initService();
 
     List<User> users = service.findMembersByDacId(1);
@@ -262,8 +257,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testAddDacMember() {
     Gson gson = new Gson();
-    User user = getDacUsers().get(0);
-    Dac dac = getDacs().get(0);
+    User user = getDacUsers().getFirst();
+    Dac dac = getDacs().getFirst();
     when(userDAO.findUserById(any())).thenReturn(user);
     when(userDAO.findUserById(any())).thenReturn(user);
     List<Election> elections =
@@ -275,7 +270,7 @@ class DacServiceTest extends AbstractTestHelper {
                   newE.setReferenceId(UUID.randomUUID().toString());
                   return newE;
                 })
-            .collect(Collectors.toList());
+            .toList();
     DataAccessRequest dar = new DataAccessRequest();
     dar.setData(new DataAccessRequestData());
     when(dataAccessRequestDAO.findByReferenceId(any())).thenReturn(dar);
@@ -294,7 +289,7 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacMember() {
     Role role = new Role(UserRoles.MEMBER.getRoleId(), UserRoles.MEMBER.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User member = getDacUsers().get(1);
     dac.setChairpersons(Collections.singletonList(getDacUsers().get(0)));
     dac.setMembers(Collections.singletonList(member));
@@ -304,7 +299,7 @@ class DacServiceTest extends AbstractTestHelper {
 
     try {
       service.removeDacMember(role, member, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
     verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
@@ -314,8 +309,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacChair() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
-    User chair1 = getDacUsers().get(0);
+    Dac dac = getDacs().getFirst();
+    User chair1 = getDacUsers().getFirst();
     User chair2 = getDacUsers().get(0);
     dac.setChairpersons(Arrays.asList(chair1, chair2));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
@@ -326,7 +321,7 @@ class DacServiceTest extends AbstractTestHelper {
 
     try {
       service.removeDacMember(role, chair1, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
     verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
@@ -337,7 +332,7 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacChairFailure() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User chair = getDacUsers().get(0);
     dac.setChairpersons(Collections.singletonList(chair));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
@@ -372,9 +367,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_1() {
     // Member has access to DataSet 1
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     initService();
 
@@ -389,9 +384,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_2() {
     // Member has access to datasets
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     initService();
 
@@ -406,7 +401,6 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_3() {
     // Member no direct access to datasets
-    List<Dataset> memberDataSets = Collections.emptyList();
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId())).thenReturn(List.of());
 
     initService();
@@ -416,7 +410,7 @@ class DacServiceTest extends AbstractTestHelper {
     List<DataAccessRequest> filtered = service.filterDataAccessRequestsByDac(dars, getMember());
 
     // Filtered documents should contain the ones the user has direct access to
-    assertEquals(memberDataSets.size(), filtered.size());
+    assertEquals(0, filtered.size());
   }
 
   @Test
@@ -441,10 +435,6 @@ class DacServiceTest extends AbstractTestHelper {
 
   /* Helper functions */
 
-  private AuthUser getUser() {
-    return new AuthUser("User");
-  }
-
   /**
    * @return A list of 5 elections with DataSet ids
    */
@@ -456,7 +446,7 @@ class DacServiceTest extends AbstractTestHelper {
               election.setDatasetId(i);
               return election;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -476,7 +466,7 @@ class DacServiceTest extends AbstractTestHelper {
               dar.setData(data);
               return dar;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -490,7 +480,7 @@ class DacServiceTest extends AbstractTestHelper {
               dataSet.setDatasetId(i);
               return dataSet;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -509,7 +499,7 @@ class DacServiceTest extends AbstractTestHelper {
               dac.setAssociatedDaa(daa);
               return dac;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
